...
                      Padding(
                        padding: const EdgeInsets.all(24.0),
                        child: AuthUserStreamWidget(
                          builder: (context) => SizedBox(
                            width: 200.0,
                            child: TextFormField(
                              key: const ValueKey('Name_mehr'),
                              controller: _model.nameTextController,
                              focusNode: _model.nameFocusNode,
                              autofocus: false,
                              obscureText: false,
                              decoration: InputDecoration(
                                isDense: true,
...
                      Padding(
                        padding: const EdgeInsets.all(24.0),
                        child: AuthUserStreamWidget(
                          builder: (context) => SizedBox(
                            width: 200.0,
                            child: TextFormField(
                              key: const ValueKey('UserName_bwh3'),
                              controller: _model.userNameTextController,
                              focusNode: _model.userNameFocusNode,
                              autofocus: false,
                              obscureText: false,
                              decoration: InputDecoration(
                                isDense: true,
...
                                              .isNotEmpty
                                          ? buttonDisplayNameInUseRecordList
                                              .first
                                          : null;

                                  return FFButtonWidget(
                                    key: const ValueKey('Button_3gn1'),
                                    onPressed: () async {
                                      if (_model.formKey.currentState == null ||
                                          !_model.formKey.currentState!
                                              .validate()) {
                                        return;
                                      }
...
