...
                                          .primaryText,
                                      width: 2.0,
                                    ),
                                  ),
                                ),
                                FlutterFlowIconButton(
                                  key: const ValueKey('IconButton_wwly'),
                                  borderRadius: 8.0,
                                  buttonSize: 40.0,
                                  icon: Icon(
                                    Icons.menu,
                                    color: FlutterFlowTheme.of(context)
                                        .primaryText,
...
